plugins {
    id 'java'
}

group = 'guru.qa'
version = '0.0.4-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
}

subprojects {
    ext {
        dockerImage = System.getProperty("os.arch") == "aarch64" || System.getProperty("os.arch") == "arm64"
                ? "arm64v8/eclipse-temurin:19-jre"
                : "eclipse-temurin:19-jre"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
